# BigNumberMultiplicaion

./: CMakeLists.txt  README.md  session.vim
src/: BigNumber.cpp  BigNumber.h  MainWindow.cpp  MainWindow.h  karatsuba.cpp  karatsuba.h  main.cpp  math.cpp  math.cpp.back  math.h  math.h.back
src/math/: CMakeLists.txt  binMultiply.cpp  binMultiply.h  karatsuba.cpp  karatsuba.h
src/widgets/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
